@@ -477,6 +477,17 @@ parameter_list|)
 throws|throws
 name|Exception
 block|{
+name|int
+name|maxDoc
+init|=
+name|searcher
+operator|.
+name|getIndexReader
+argument_list|()
+operator|.
+name|maxDoc
+argument_list|()
+decl_stmt|;
 name|TopDocs
 name|all
 init|=
@@ -488,10 +499,7 @@ name|query
 argument_list|,
 name|filter
 argument_list|,
-name|searcher
-operator|.
 name|maxDoc
-argument_list|()
 argument_list|)
 decl_stmt|;
 name|int
@@ -505,10 +513,7 @@ name|random
 argument_list|,
 literal|1
 argument_list|,
-name|searcher
-operator|.
 name|maxDoc
-argument_list|()
 operator|*
 literal|2
 argument_list|)
