@@ -6995,6 +6995,9 @@ name|docIDX
 operator|<
 name|s
 operator|.
+name|getIndexReader
+argument_list|()
+operator|.
 name|maxDoc
 argument_list|()
 condition|;
