@@ -252,6 +252,9 @@ name|docfreq
 init|=
 name|searcher
 operator|.
+name|getIndexReader
+argument_list|()
+operator|.
 name|docFreq
 argument_list|(
 operator|new
@@ -278,6 +281,9 @@ argument_list|(
 name|docfreq
 argument_list|,
 name|searcher
+operator|.
+name|getIndexReader
+argument_list|()
 operator|.
 name|maxDoc
 argument_list|()
