@@ -1709,8 +1709,13 @@ argument_list|()
 decl_stmt|;
 try|try
 block|{
+comment|// TODO: we should use ReaderUtil+seekExact, we dont care about the docFreq
+comment|// this is just an existence check
 return|return
 name|indexSearcher
+operator|.
+name|getIndexReader
+argument_list|()
 operator|.
 name|docFreq
 argument_list|(
@@ -1836,9 +1841,18 @@ name|TermsEnum
 argument_list|>
 argument_list|()
 decl_stmt|;
+specifier|final
+name|IndexReader
+name|reader
+init|=
+name|searcher
+operator|.
+name|getIndexReader
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|searcher
+name|reader
 operator|.
 name|maxDoc
 argument_list|()
@@ -1851,10 +1865,7 @@ name|ReaderUtil
 operator|.
 name|Gather
 argument_list|(
-name|searcher
-operator|.
-name|getIndexReader
-argument_list|()
+name|reader
 argument_list|)
 block|{
 annotation|@
